syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.unimal.grpc.board";
option java_outer_classname = "BoardProto";

service BoardService {
  rpc getBoard (GetRequest) returns (GetResponse);
  rpc getBoardService (GetEmptyRequest) returns (GetResponse);
}

message GetRequest {
  bytes board = 1;
}

message GetEmptyRequest {}

message GetResponse {
  string boards = 1;
}