syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.unimal.proto.map.geocoding";
option java_outer_classname = "ReverseGeocodingProto";

service ReverseGeocodingService {
  rpc getReverseGeocoding (ReverseGeocodingGetRequest) returns (ReverseGeocodingGetResponse);
}

message ReverseGeocodingGetRequest {
  double latitude = 1;
  double longitude = 2;
}

message ReverseGeocodingGetResponse {
  string streetName = 1;
  string streetNumber = 2;
  string postalCode = 3;
  string siDo = 4;
  string guGun = 5;
  string dong = 6;
}